WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108543
[Chromium] WebViewTest.SetCompositionFromExistingText failing after
r141479
https://bugs.webkit.org/show_bug.cgi?id=108543
Summary
[Chromium] WebViewTest.SetCompositionFromExistingText failing after r141479
Florin Malita
Reported
2013-01-31 15:32:55 PST
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=@ToT%20-%20chromium.org&testType=webkit_unit_tests&tests=WebViewTest.SetCompositionFromExistingText
http://build.chromium.org/p/chromium.webkit/builders/WebKit%20Linux%2032/builds/3808/steps/webkit_unit_tests/logs/SetCompositionFromExistingText
Attachments
Patch
(2.53 KB, patch)
2013-01-31 16:22 PST
,
Aurimas Liutikas
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Florin Malita
Comment 1
2013-01-31 15:40:30 PST
http://trac.webkit.org/changeset/141496
Aurimas Liutikas
Comment 2
2013-01-31 16:22:11 PST
Created
attachment 185889
[details]
Patch
Florin Malita
Comment 3
2013-01-31 16:43:42 PST
Thanks for the quick fix!
WebKit Review Bot
Comment 4
2013-01-31 22:57:35 PST
Comment on
attachment 185889
[details]
Patch Clearing flags on attachment: 185889 Committed
r141540
: <
http://trac.webkit.org/changeset/141540
>
WebKit Review Bot
Comment 5
2013-01-31 22:57:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug