[Chromium] WebViewTest.SetCompositionFromExistingText failing after r141479 https://bugs.webkit.org/show_bug.cgi?id=108543

Patch by Aurimas Liutikas <aurimas@chromium.org> on 2013-01-31
Reviewed by Ryosuke Niwa.

Fixing a bug that was uncovered after fixing http://trac.webkit.org/changeset/141479

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::setCompositionFromExistingText):
* tests/WebViewTest.cpp:
    Re-enabling the test

Canonical link: https://commits.webkit.org/126805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141540 268f45cc-cd09-0410-ab3c-d52691b4dbfc