Source/WebKit/chromium/src/WebViewImpl.cpp
@@ -2449,6 +2449,8 @@ bool WebViewImpl::setCompositionFromExistingText(int compositionStart, int compo
     String text = editor->selectedText();
     focused->document()->execCommand("delete", true);
     editor->setComposition(text, CompositionUnderlineVectorBuilder(underlines), 0, 0);
+    // Need to set setIgnoreCompositionSelectionChange(true) again because setComposition resets it to false.
+    editor->setIgnoreCompositionSelectionChange(true);
     editor->setSelectionOffsets(location, location + length);
     editor->setIgnoreCompositionSelectionChange(false);
 
